@@ -1,4 +1,4 @@
-.TH ser2net 1 06/02/01  "Serial to network proxy"
+.TH ser2net 8 06/02/01  "Serial to network proxy"
 
 .SH NAME
 ser2net \- Serial to network proxy
